fixing some spacing, padding, z-index and text-align issues
The text-align issue was for images...not text

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ header{
   align-items: center;
   width: 100%;
   padding: 1rem 2rem;
-  z-index: 1;
+  z-index: 2;
   background-color: #fff;
 }
 
@@ -40,7 +40,6 @@ header{
     grid-template-rows: 1fr;
     padding: 1.5rem 2.5rem;
     opacity: 100%;
-    z-index: 1;
   }
 }
 
@@ -76,7 +75,6 @@ header nav{
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
   width: 100%;
   height:  100vh;
   display: flex;
@@ -102,7 +100,6 @@ header nav{
     flex-direction: row;
     gap: 2rem;
     background-color: #fff;
-    z-index: 1;
     padding: 0;
     margin: 0;
   }
@@ -230,8 +227,8 @@ header nav a{
   align-self: start;
   justify-self: start;
   text-align: left;
-  padding-right: 3.5rem;
-  padding-top: 2rem;
+/*  padding-right: 3.5rem;
+*/  padding-top: 2rem;
   z-index: 1;
   /*styling*/
   color: #fff;
@@ -297,6 +294,7 @@ header nav a{
 .features-benefits ul li .image img{
   border-radius: 20rem;
   justify-self: center;
+  text-align: center;
   object-fit: cover;
   width: 80%;
 }
